# dsa-2024-ne-exam

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
appointments/: Appointment.cpp  Appointment.h
doctors/: Doctor.cpp  Doctor.h
patients/: Patient.cpp  Patient.h
